Updated the fa - latest changes

--- a/index.html
+++ b/index.html
@@ -6,60 +6,41 @@
     <title>Line Tech Softwares - Plug into Possibility</title>
     <meta name="description" content="Your one-stop solution for all your IT needs. From software installation to custom website development, we've got you covered.">
     <meta name="google-site-verification" content="94CbTFF6oULa7fb5Hh3dz7a5ouk9ZOOmH9UXgm9v3HM" />
-<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Line Tech Softwares - Your complete IT solution in South Africa. We provide IT support, cybersecurity, custom software development, cloud services, coding lessons, and mobile support. Plug into possibility with our professional tech services.">
-  <meta name="keywords" content="IT support South Africa, cybersecurity services, software development, cloud hosting, coding lessons, mobile support, data backup, Line Tech, custom software, application development, network security, cloud storage, programming tutoring, HTML CSS JavaScript, Python tutoring, Java tutoring, data science lessons, Pretoria coding, online coding classes, phone virus removal, OS reinstallation, Android support, iOS support">
-  
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://linetechsoftwares.co.za/">
-  <meta property="og:title" content="Line Tech Softwares - Plug into Possibility">
-  <meta property="og:description" content="Professional IT services including support, cybersecurity, software development, cloud solutions, coding lessons, and mobile support in South Africa.">
-  <meta property="og:image" content="Line Tech Logo 2.png">
+    <meta name="keywords" content="IT support South Africa, cybersecurity services, software development, cloud hosting, coding lessons, mobile support, data backup, Line Tech, custom software, application development, network security, cloud storage, programming tutoring">
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://x.com/linetech___">
-  <meta property="twitter:title" content="Line Tech Softwares - Plug into Possibility">
-  <meta property="twitter:description" content="Professional IT services including support, cybersecurity, software development, cloud solutions, coding lessons, and mobile support in South Africa.">
-  <meta property="twitter:image" content="Line Tech Logo 2.png">
+    <!-- Open Graph / Twitter -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://linetechsoftwares.co.za/">
+    <meta property="og:title" content="Line Tech Softwares - Plug into Possibility">
+    <meta property="og:description" content="Professional IT services including support, cybersecurity, software development, cloud solutions, coding lessons, and mobile support in South Africa.">
+    <meta property="og:image" content="ASSETS/logos/Line Tech Logo 2.png">
 
-</head>
-<body>
-        <!-- Cookie Banner -->
-        <div id="cookie-banner" style="display: none;">
-            <div id="cookie-banner-content">
-                <h2 id="cookie-banner-title">We Use Cookies</h2>
-                <p id="cookie-banner-text">We use essential cookies to provide our services and improve your experience. By continuing to browse our site, you consent to our use of cookies.</p>
-            </div>
-            <button id="cookie-accept">Ok, I got it</button>
-        </div>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Line Tech Softwares - Plug into Possibility">
+    <meta name="twitter:description" content="Professional IT services including support, cybersecurity, software development, cloud solutions, coding lessons, and mobile support in South Africa.">
 
-     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./ASSETS/Line-Tech-Logo-2.ico">
-      <!-- Favicon for online deployment -->
-    <link rel="icon" href="./ASSETS/Line-Tech-Logo-2.ico" type="image/x-icon">
-    <link rel="icon" href="/Line-Tech-Logo-2.ico" type="image/png" sizes="512x512">
- <!-- Font Awesome -->
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
     <!-- CSS Files -->
     <link rel="stylesheet" href="./CSS/index.css">
     <link rel="stylesheet" href="./CSS/Hamburgermenu.css">
     <link rel="stylesheet" href="./CSS/cookieBanner.css">
 </head>
 <body>
-        <!-- Cookie Banner -->
-        <div id="cookie-banner" style="display: none;">
-            <div id="cookie-banner-content">
-                <h2 id="cookie-banner-title">We Use Cookies</h2>
-                <p id="cookie-banner-text">We use essential cookies to provide our services and improve your experience. By continuing to browse our site, you consent to our use of cookies.</p>
-            </div>
-            <button id="cookie-accept">Ok, I got it</button>
+    <!-- Cookie Banner -->
+    <div id="cookie-banner" style="display: none;">
+        <div id="cookie-banner-content">
+            <h2 id="cookie-banner-title">We Use Cookies</h2>
+            <p id="cookie-banner-text">We use essential cookies to provide our services and improve your experience. By continuing to browse our site, you consent to our use of cookies.</p>
         </div>
+        <button id="cookie-accept">Ok, I got it</button>
+    </div>
 
-        <!-- Header -->
+    <!-- Header -->
     <header class="header">
         <div class="container">
             <div class="nav-wrapper">
@@ -145,6 +126,8 @@
                     <button class="filter-btn active" data-filter="all">All Services</button>
                     <button class="filter-btn" data-filter="security">Security</button>
                     <button class="filter-btn" data-filter="software">Software & OS</button>
+                    <button class="filter-btn" data-filter="web">Website Development</button>
+                    <button class="filter-btn" data-filter="app">App Development</button>
                     <button class="filter-btn" data-filter="education">Education</button>
                     <button class="filter-btn" data-filter="mobile">Mobile Services</button>
                     <button class="filter-btn" data-filter="consulting">Consulting</button>
@@ -342,6 +325,105 @@
                     </div>
                     
                     <a href="#contact" class="service-button">Request Mobile Help</a>
+                </div>
+
+                <!-- Website & Presentation Development -->
+                <div class="service-card" data-filter="web" data-aos="fade-up" data-aos-delay="350">
+                    <div class="service-icon">
+                        <i class="fas fa-globe"></i>
+                    </div>
+                    <h3 class="service-title">Website & Presentation Development</h3>
+                    <p class="service-description">From simple showcases and PowerPoint presentations to full e-commerce solutions and custom integrations.</p>
+
+                    <div class="pricing-packages">
+                        <div class="pricing-package">
+                            <h4>Starter Package</h4>
+                            <p class="package-price">R1,299</p>
+                            <ul>
+                                <li>Simple showcase website</li>
+                                <li>Manual order processing</li>
+                                <li>Basic contact form</li>
+                                <li>Mobile responsive</li>
+                            </ul>
+                        </div>
+
+                        <div class="pricing-package featured">
+                            <h4>Business Package</h4>
+                            <p class="package-price">R2,499</p>
+                            <ul>
+                                <li>Online store functionality</li>
+                                <li>Payment gateway integration</li>
+                                <li>Video content support</li>
+                                <li>SEO optimization</li>
+                            </ul>
+                        </div>
+
+                        <div class="pricing-package">
+                            <h4>Advanced Package</h4>
+                            <p class="package-price">R3,999</p>
+                            <ul>
+                                <li>Advanced features & marketing tools</li>
+                                <li>Subscription management</li>
+                                <li>Custom integrations</li>
+                            </ul>
+                        </div>
+
+                        <div class="pricing-package">
+                            <h4>Enterprise Package</h4>
+                            <p class="package-price">Custom</p>
+                            <ul>
+                                <li>Fully customised solution</li>
+                                <li>Advanced functionality & priority support</li>
+                                <li>Dedicated project manager</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <a href="#contact" class="service-button">Get a Quote</a>
+                </div>
+
+                <!-- App Development -->
+                <div class="service-card" data-filter="app" data-aos="fade-up" data-aos-delay="375">
+                    <div class="service-icon">
+                        <i class="fas fa-mobile-screen-button"></i>
+                    </div>
+                    <h3 class="service-title">App Development</h3>
+                    <p class="service-description">Mobile applications for Desktop, Android and iOS tailored to your needs — from MVPs to fully-featured apps.</p>
+
+                    <div class="pricing-packages">
+                        <div class="pricing-package">
+                            <h4>Basic App</h4>
+                            <p class="package-price">R2,999</p>
+                            <ul>
+                                <li>Simple functionality</li>
+                                <li>Basic UI/UX</li>
+                                <li>Single platform</li>
+                                <li>Basic testing</li>
+                            </ul>
+                        </div>
+
+                        <div class="pricing-package featured">
+                            <h4>Standard App</h4>
+                            <p class="package-price">R5,999</p>
+                            <ul>
+                                <li>Cross-platform support</li>
+                                <li>Professional design</li>
+                                <li>API integrations</li>
+                            </ul>
+                        </div>
+
+                        <div class="pricing-package">
+                            <h4>Premium App</h4>
+                            <p class="package-price">R9,999</p>
+                            <ul>
+                                <li>Complex functionality</li>
+                                <li>Custom animations & backend</li>
+                                <li>App store optimisation</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <a href="#contact" class="service-button">Discuss App</a>
                 </div>
 
                 <!-- IT Consulting -->
